--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,11 @@ xcuserdata
 
 *.moved-aside
 
+####
+# App Code
+####
+
+.idea
 
 ####
 # UNKNOWN: recommended by others, but I can't discover what these files are
